--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 Flask==2.3.2
-Flask-Login==0.6.3
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
-Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.18
-Werkzeug==2.3.6
-pytz==2024.1
+WTForms==3.1.1
+email_validator==1.3.1
+python-dotenv==1.0.1
 gspread==5.12.0
 oauth2client==4.1.3
-wtforms==3.1.2
-gunicorn==21.2.0
+pytz==2024.1
