--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
-Flask==2.3.2
+Flask==2.3.3
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
-WTForms==3.1.1
-email_validator==1.3.1
-python-dotenv==1.0.1
+
+email-validator==1.3.1
+gunicorn==21.2.0
+
 gspread==5.12.0
 oauth2client==4.1.3
+google-auth==2.28.1
+google-auth-oauthlib==1.2.0
+requests-oauthlib==2.0.0
+
+Werkzeug==2.3.7
+WTForms==3.1.2
+Jinja2==3.1.2
 pytz==2024.1
-gunicorn==21.2.0
+python-dotenv==1.0.1
